# ban-do-dien-tu-django

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
DoAn_QuanLyDoDienTu/: settings.py
chatbot_langchain/docs/: custom_data.txt  last_update.txt
frontend/: models.py  urls.py  views.py
frontend/aiagent/: rag_handler_refactored.py  test.py
frontend/migrations/: 0008_add_order_type.py
frontend/templatetags/: cart_tags.py  custom_filters.py
frontend/utils/: db_helper.py  random_name.py  types.py
frontend/views/: __init__.py  auth_views.py  cart_payment_views.py  frontend_views.py  profile_views.py
frontend/views/admin/: brand_views.py  categories_views.py  chatbot_views.py  cong_trinh_views.py  dashboard_views.py  giai_phap_views.py  order_views.py  products_views.py  user_views.py
static/backend/css/: styles.css
static/css/: cart_custom.css  chat.css  style.css
templates/backend/components/: header-navbar.html  layout.html  sidebar.html
templates/backend/pages/: dashboard.html
templates/backend/pages/orders/: list.html
templates/backend/pages/products/: list.html
templates/backend/pages/users/: detail.html
templates/frontend/components/: box_chat.html  footer.html  header.html  layout.html  navbar.html  search.html
templates/frontend/pages/: cart.html  homepage.html  order_history.html  product.html  products_brand.html  products_category.html  profile.html  search.html  ve_chung_toi.html
