[project]
name = "ban-do-dien-tu-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1",
    "ctransformers>=0.2.27",
    "django==5.1.7",
    "faiss-cpu>=1.12.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "pypdf>=6.1.3",
    "sentence-transformers>=5.1.2",
    "sqlparse==0.5.3",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "tzdata==2025.1",
]
